--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 TODO Dolce: $Id$
 - Add a new input parameter to limit the size of incoming emails (at the list
   level)
+- Fix the error occuring when accepting/rejecting a mail in moderation mode
+  if the user is not already logged in CPS
 - Provide a GUI for mail moderation (the current mechanism only relies on
   MailBoxer's facilities and is not well integrated with CPS)
 - CPSMailArchive workflow should only be defined in CPSMailBoxerFolder
