--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,20 @@
 *******************************************
+** CPSMailBoxer V0.2.2 [R1 build 2004/04/07-11:07 by madarche]
+
+Requires:
+~~~~~~~~~
+-
+New features:
+~~~~~~~~~~~~~
+-
+Bug fixes:
+~~~~~~~~~~
+- Cannot find the email address in some cases
+New internal features:
+~~~~~~~~~~~~~~~~~~~~~~
+- Email address search now based on CPSDirectory
+
+*******************************************
 ** CPSMailBoxer V0.2.1 [R1 build 2004/03/31-15:36 by epietrig]
 
 Requires:
