--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"POT-Creation-Date: 2004-04-07 13:03default\n"
-"PO-Revision-Date: 2004-03-29 10:46+0200\n"
+"POT-Creation-Date: 2004-04-08 08:41default\n"
+"PO-Revision-Date: 2004-04-08 08:42+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Language-name: Language\n"
 "Preferred-encodings: utf-8 latin1\n"
 "Domain: default\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #.   <em>
 #.             ${mail_addr (tal replace="email")} nmb_label_not_yet_subscribed
@@ -223,7 +223,7 @@ msgstr "Cette liste ne possède pas d'archive"
 msgid "nmb_label_no_member"
 msgstr "Pas de membre"
 
-#.   <option attributes="selected 
+#.   <option attributes="selected
 #.                                               python:
 #.                                                 test(here.archived == 'not archived',
 #.                                                      'selected',nothing)" value="not archived">nmb_label_not_archived</option>
@@ -243,7 +243,7 @@ msgstr "nov"
 msgid "nmb_label_oct"
 msgstr "oct"
 
-#.   <option attributes="selected 
+#.   <option attributes="selected
 #.                                               python:
 #.                                                 test(here.archived == 'plain text',
 #.                                                      'selected',nothing)" value="plain text">nmb_label_plain_text</option>
@@ -311,13 +311,16 @@ msgstr "Dossier parent"
 msgid "nmb_label_validate"
 msgstr "Enregistrer"
 
-#.   <option attributes="selected 
+#.   <option attributes="selected
 #.                                               python:
 #.                                                 test(here.archived == 'with attachments',
 #.                                                      'selected',nothing)" value="with attachments">nmb_label_with attach</option>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_with attach"
 msgstr "avec pièces jointes"
+
+msgid "w__mailAttachment"
+msgstr "Pièce jointe"
 
 msgid "CPSMailArchive_title"
 msgstr "Archive courriel"
@@ -412,3 +415,4 @@ msgstr " "
 
 #~ msgid "mailBody_widget_label"
 #~ msgstr "Corps du message"
+
