--- a/i18n/nl.po
+++ b/i18n/nl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-04-07 13:03default\n"
+"POT-Creation-Date: 2004-04-08 08:41default\n"
 "PO-Revision-Date: 2003-12-19 16:51+0100\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
@@ -319,6 +319,10 @@ msgstr "Save Changes"
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_with attach"
 msgstr "with attachments"
+
+#, fuzzy
+msgid "w__mailAttachment"
+msgstr "Attachments"
 
 msgid "CPSMailArchive_title"
 msgstr ""
