--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- more i18n
+- i18n default lang bug fix at install
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
