--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ New features:
 Bug fixes:
 ~~~~~~~~~~
 - Updating doc
+- Allow CPSMailBoxer in sections too (not only workspace)
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
