--- a/i18n/nl.po
+++ b/i18n/nl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-04-08 08:41default\n"
+"POT-Creation-Date: 2004-07-21 16:57default\n"
 "PO-Revision-Date: 2003-12-19 16:51+0100\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
@@ -32,6 +32,17 @@ msgstr "${mail_addr} is not yet subscribed to this list"
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "${nb_members} nmb_label_nb_members"
 msgstr "${nb_members} users are subscribed to the list"
+
+#.   <input value="cpsmailboxer_button_publish" class="context" name="cpsmailboxer_publish_msg:method" type="submit" />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+msgid "cpsmailboxer_button_publish"
+msgstr ""
+
+#.   <input attributes="onclick python:'return window.confirm(\'%s\')' %
+#.                                    (cpsmcat('nmb_confirm_reject'), )" value="cpsmailboxer_button_reject" class="destructive" name="cpsmailboxer_reject_msg:method" type="submit" />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+msgid "cpsmailboxer_button_reject"
+msgstr ""
 
 #.   <div />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
@@ -320,6 +331,12 @@ msgstr "Save Changes"
 msgid "nmb_label_with attach"
 msgstr "with attachments"
 
+#.   <h1>Pending messages</h1>
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+#, fuzzy
+msgid "nmb_title_message_moderation"
+msgstr "Moderator"
+
 #, fuzzy
 msgid "w__mailAttachment"
 msgstr "Attachments"
@@ -378,6 +395,44 @@ msgstr "Attachments"
 
 msgid "Create Newsletter"
 msgstr ""
+
+msgid "action_moderate_msgs"
+msgstr ""
+
+#, fuzzy
+msgid "nmb_mail_reject_1"
+msgstr "Subject:"
+
+#, fuzzy
+msgid "nmb_mail_reject_2"
+msgstr "Subject:"
+
+#, fuzzy
+msgid "nmb_mail_reject_3"
+msgstr "Subject:"
+
+#, fuzzy
+msgid "nmb_mail_reject_4"
+msgstr "Subject:"
+
+#, fuzzy
+msgid "nmb_mail_reject_5"
+msgstr "Subject:"
+
+#, fuzzy
+msgid "nmb_mail_reject_6"
+msgstr "Subject:"
+
+#, fuzzy
+msgid "nmb_confirm_reject"
+msgstr "Subject:"
+
+msgid "nmb_messages_published"
+msgstr ""
+
+#, fuzzy
+msgid "mnb_messages_rejected"
+msgstr "Subject:"
 
 msgid "blank"
 msgstr " "
