--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"POT-Creation-Date: 2004-04-08 08:41default\n"
-"PO-Revision-Date: 2004-04-08 08:42+0200\n"
+"POT-Creation-Date: 2004-07-21 16:57default\n"
+"PO-Revision-Date: 2004-07-21 16:57+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,6 +32,17 @@ msgstr "${mail_addr} ne figure pas encore dans la liste des abonnés"
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "${nb_members} nmb_label_nb_members"
 msgstr "${nb_members} utilisateurs sont abonnés à cette liste"
+
+#.   <input value="cpsmailboxer_button_publish" class="context" name="cpsmailboxer_publish_msg:method" type="submit" />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+msgid "cpsmailboxer_button_publish"
+msgstr "Accepter"
+
+#.   <input attributes="onclick python:'return window.confirm(\'%s\')' %
+#.                                    (cpsmcat('nmb_confirm_reject'), )" value="cpsmailboxer_button_reject" class="destructive" name="cpsmailboxer_reject_msg:method" type="submit" />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+msgid "cpsmailboxer_button_reject"
+msgstr "Rejeter"
 
 #.   <div />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
@@ -319,6 +330,11 @@ msgstr "Enregistrer"
 msgid "nmb_label_with attach"
 msgstr "avec pièces jointes"
 
+#.   <h1>Pending messages</h1>
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+msgid "nmb_title_message_moderation"
+msgstr "Messages à modérer"
+
 msgid "w__mailAttachment"
 msgstr "Pièce jointe"
 
@@ -373,6 +389,36 @@ msgstr "Pièce jointe"
 
 msgid "Create Newsletter"
 msgstr "Envoyer une lettre d'information"
+
+msgid "action_moderate_msgs"
+msgstr "Modération"
+
+msgid "nmb_mail_reject_1"
+msgstr "Votre message intitulé"
+
+msgid "nmb_mail_reject_2"
+msgstr "datant du"
+
+msgid "nmb_mail_reject_3"
+msgstr "a été rejeté"
+
+msgid "nmb_mail_reject_4"
+msgstr "Rejet du message"
+
+msgid "nmb_mail_reject_5"
+msgstr "pour la raison suivante :"
+
+msgid "nmb_mail_reject_6"
+msgstr "Contenu du message :"
+
+msgid "nmb_confirm_reject"
+msgstr "Le(s) message(s) sélectionné(s) vont être détruits. Continuer ?"
+
+msgid "nmb_messages_published"
+msgstr "Message(s) publié(s)"
+
+msgid "mnb_messages_rejected"
+msgstr "Message(s) rejeté(s)"
 
 msgid "blank"
 msgstr " "
