--- a/i18n/custom.pot
+++ b/i18n/custom.pot
@@ -19,6 +19,9 @@ msgstr ""
 msgid "w__mailAttachment"
 msgstr ""
 
+msgid "MailBoxerModerator"
+msgstr ""
+
 msgid "CPSMailArchive_title"
 msgstr ""
 
