--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"POT-Creation-Date: 2004-07-21 16:57default\n"
-"PO-Revision-Date: 2004-07-21 16:57+0200\n"
+"POT-Creation-Date: 2004-07-21 17:41default\n"
+"PO-Revision-Date: 2004-07-21 17:42+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -337,6 +337,9 @@ msgstr "Messages à modérer"
 
 msgid "w__mailAttachment"
 msgstr "Pièce jointe"
+
+msgid "MailBoxerModerator"
+msgstr "Modérateur de liste"
 
 msgid "CPSMailArchive_title"
 msgstr "Archive courriel"
