fixed msgid typo

--- a/i18n/it.po
+++ b/i18n/it.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-07-21 17:41default\n"
+"POT-Creation-Date: 2004-07-22 09:26default\n"
 "PO-Revision-Date: 2004-05-10 15:47+0100\n"
 "Last-Translator: Paolo Dina <paolo@php3.it>\n"
 "Language-Team: francais <fr@li.org>\n"
@@ -468,6 +468,16 @@ msgstr "Invia lettera di informazione"
 msgid "action_moderate_msgs"
 msgstr ""
 
+#    <div class="label required">nmb_label_moderator</div>
+#, fuzzy
+msgid "nmb_mail_moderate_1"
+msgstr "Moderatore (email)"
+
+#    <div class="label required">nmb_label_moderator</div>
+#, fuzzy
+msgid "nmb_mail_moderate_2"
+msgstr "Moderatore (email)"
+
 #    <td>nmb_label_subject</td>
 #, fuzzy
 msgid "nmb_mail_reject_1"
@@ -503,12 +513,12 @@ msgstr "Oggetto:"
 msgid "nmb_confirm_reject"
 msgstr "Oggetto:"
 
-msgid "nmb_messages_published"
+msgid "nmb_psm_messages_published"
 msgstr ""
 
 #    <td>nmb_label_subject</td>
 #, fuzzy
-msgid "mnb_messages_rejected"
+msgid "nmb_psm_messages_rejected"
 msgstr "Oggetto:"
 
 msgid "blank"
