--- a/i18n/custom.pot
+++ b/i18n/custom.pot
@@ -73,6 +73,12 @@ msgstr ""
 msgid "action_moderate_msgs"
 msgstr ""
 
+msgid "nmb_mail_moderate_1"
+msgstr ""
+
+msgid "nmb_mail_moderate_2"
+msgstr ""
+
 msgid "nmb_mail_reject_1"
 msgstr ""
 
@@ -94,10 +100,10 @@ msgstr ""
 msgid "nmb_confirm_reject"
 msgstr ""
 
-msgid "nmb_messages_published"
+msgid "nmb_psm_messages_published"
 msgstr ""
 
-msgid "mnb_messages_rejected"
+msgid "nmb_psm_messages_rejected"
 msgstr ""
 
 msgid "blank"
