--- a/i18n/en.po
+++ b/i18n/en.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-07-21 17:41default\n"
-"PO-Revision-Date: 2004-07-21 17:42+0200\n"
+"POT-Creation-Date: 2004-07-22 09:26default\n"
+"PO-Revision-Date: 2004-07-22 09:27+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -396,6 +396,12 @@ msgstr "Send a newsletter"
 msgid "action_moderate_msgs"
 msgstr "Moderation"
 
+msgid "nmb_mail_moderate_1"
+msgstr "Moderation request"
+
+msgid "nmb_mail_moderate_2"
+msgstr "A new message has entered the moderation queue:"
+
 msgid "nmb_mail_reject_1"
 msgstr "Your message"
 
@@ -417,10 +423,10 @@ msgstr "Message content:"
 msgid "nmb_confirm_reject"
 msgstr "Selected message(s) will be destroyed. Proceed?"
 
-msgid "nmb_messages_published"
+msgid "nmb_psm_messages_published"
 msgstr "Message(s) published"
 
-msgid "mnb_messages_rejected"
+msgid "nmb_psm_messages_rejected"
 msgstr "Message(s) rejected"
 
 msgid "blank"
