--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"POT-Creation-Date: 2004-07-21 17:41default\n"
-"PO-Revision-Date: 2004-07-21 17:42+0200\n"
+"POT-Creation-Date: 2004-07-22 09:26default\n"
+"PO-Revision-Date: 2004-07-22 09:27+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -396,6 +396,12 @@ msgstr "Envoyer une lettre d'information"
 msgid "action_moderate_msgs"
 msgstr "Modération"
 
+msgid "nmb_mail_moderate_1"
+msgstr "Message à modérer"
+
+msgid "nmb_mail_moderate_2"
+msgstr "Un nouveau message est en attente de modération :"
+
 msgid "nmb_mail_reject_1"
 msgstr "Votre message intitulé"
 
@@ -417,10 +423,10 @@ msgstr "Contenu du message :"
 msgid "nmb_confirm_reject"
 msgstr "Le(s) message(s) sélectionné(s) vont être détruits. Continuer ?"
 
-msgid "nmb_messages_published"
+msgid "nmb_psm_messages_published"
 msgstr "Message(s) publié(s)"
 
-msgid "mnb_messages_rejected"
+msgid "nmb_psm_messages_rejected"
 msgstr "Message(s) rejeté(s)"
 
 msgid "blank"
