--- a/i18n/en.po
+++ b/i18n/en.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-07-22 09:26default\n"
-"PO-Revision-Date: 2004-07-22 09:27+0200\n"
+"POT-Creation-Date: 2004-07-22 11:34default\n"
+"PO-Revision-Date: 2004-07-22 11:35+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -84,6 +84,11 @@ msgstr "Managing users subscribed to list \"${title}\""
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_newsletter_create_form.pt
 msgid "nmb_heading_newsletter_create"
 msgstr "Creation of a newsletter"
+
+#.   <div condition="not:proxy" />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+msgid "nmb_label_already_moderated"
+msgstr "This message has already been moderated."
 
 #.   <em>
 #.             nmb_label_already_subscribed ${mail_addr (tal replace="email")}
@@ -211,7 +216,7 @@ msgstr "may"
 #.   <div class="label required">nmb_label_moderator</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_moderator"
-msgstr "Moderator (email)"
+msgstr "Principal moderator's email address"
 
 #.   <div class="label">nmb_label_modetared</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
