--- a/i18n/nl.po
+++ b/i18n/nl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-07-22 09:26default\n"
+"POT-Creation-Date: 2004-07-22 11:34default\n"
 "PO-Revision-Date: 2003-12-19 16:51+0100\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
@@ -84,6 +84,12 @@ msgstr "Managing users subscribed to list \"${title}\""
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_newsletter_create_form.pt
 msgid "nmb_heading_newsletter_create"
 msgstr "Creation of news letter "
+
+#.   <div condition="not:proxy" />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_moderation_form.pt
+#, fuzzy
+msgid "nmb_label_already_moderated"
+msgstr "Moderated"
 
 #.   <em>
 #.             nmb_label_already_subscribed ${mail_addr (tal replace="email")}
