--- a/i18n/custom.pot
+++ b/i18n/custom.pot
@@ -100,6 +100,12 @@ msgstr ""
 msgid "nmb_confirm_reject"
 msgstr ""
 
+msgid "nmb_confirm_purge"
+msgstr ""
+
+msgid "nmb_psm_queue_purged"
+msgstr ""
+
 msgid "nmb_psm_messages_published"
 msgstr ""
 
