--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,20 @@
 *******************************************
+** CPSMailBoxer V0.3.3 [R1 build 2005/01/28-15:13 by madarche]
+
+Requires:
+~~~~~~~~~
+-
+New features:
+~~~~~~~~~~~~~
+-
+Bug fixes:
+~~~~~~~~~~
+- Added Romanian translation.
+New internal features:
+~~~~~~~~~~~~~~~~~~~~~~
+-
+
+*******************************************
 ** CPSMailBoxer V0.3.2 [R1 build 2004/07/26-11:48 by epietrig]
 
 Requires:
